--- a/config/DevicesConfig.ini
+++ b/config/DevicesConfig.ini
@@ -19,3 +19,6 @@ autoAcceptAlerts = True
 noReset = True
 automationName = uiautomator2
 url = http://localhost:4723/wd/hub
+
+[Log]
+log_Type = logcat
