DeviceTest0.0.2.2 TheFiv 2020/11/16 封装appium服务启动，关闭，新增打印控制台log日志，修改为多线程方法执行用例

--- a/config/DevicesConfig.ini
+++ b/config/DevicesConfig.ini
@@ -8,6 +8,7 @@ autoAcceptAlerts = True
 noReset = True
 automationName = 'uiautomator2'
 url = http://localhost:4724/wd/hub
+port = 4724
 
 [SUBDUT]
 platformName = Android
@@ -19,6 +20,7 @@ autoAcceptAlerts = True
 noReset = True
 automationName = uiautomator2
 url = http://localhost:4723/wd/hub
+port = 4723
 
 [Log]
 log_Type = logcat
